# streamlit-cookbook

./: .env  README.md  StreamlitProjects.code-workspace  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/graph/: node.py  state.py
src/tools/: tavily_tool.py
tools/: flight_tool.py  tavily_tool.py
