[project]
name = "my-streamlit-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
    "langgraph>=0.0.60",
    "langchain>=0.2.0",
    "langchain-groq>=0.1.0",
    "psycopg[binary]>=3.1.0",
    "typing-extensions>=4.8.0",
]
