[project]
name = "my-streamlit-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tavily>=1.1.0",
    "typing>=3.10.0.0",
]
